tests/baselines/reference/unusedPrivateVariableInClass5.errors.txt
tests/cases/compiler/unusedPrivateVariableInClass5.ts(3,13): error TS6133: 'y' is declared but never used.


==== tests/cases/compiler/unusedPrivateVariableInClass5.ts (1 errors) ====
    class greeter {
        private x: string;
        private y: string;
                ~
!!! error TS6133: 'y' is declared but never used.
        public  z: string;
    
        constructor() {
            this.x = "dummy value";
        }
    }